[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tiles/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HealthHeat.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Triggerboxes/Triggerbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/World1.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 92.5 )

[node name="World1" type="Node2D"]
script = ExtResource( 6 )

[node name="Floor" type="Node" parent="."]

[node name="Tile" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 32, 568 )

[node name="Tile2" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 32, 632 )

[node name="Tile3" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 96, 568 )

[node name="Tile4" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 96, 632 )

[node name="Tile5" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 160, 568 )

[node name="Tile6" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 160, 632 )

[node name="Tile7" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 224, 568 )

[node name="Tile8" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 224, 632 )

[node name="Tile9" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 288, 568 )

[node name="Tile10" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 288, 632 )

[node name="Tile11" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 352, 568 )

[node name="Tile12" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 352, 632 )

[node name="Tile13" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 416, 568 )

[node name="Tile14" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 416, 632 )

[node name="Tile15" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 480, 568 )

[node name="Tile16" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 480, 632 )

[node name="Tile17" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 544, 568 )

[node name="Tile18" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 544, 632 )

[node name="Tile19" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 608, 568 )

[node name="Tile20" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 608, 632 )

[node name="Tile21" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 672, 568 )

[node name="Tile22" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 672, 632 )

[node name="Tile23" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 736, 568 )

[node name="Tile24" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 736, 632 )

[node name="Tile25" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 800, 568 )

[node name="Tile26" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 800, 632 )

[node name="Tile27" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 864, 568 )

[node name="Tile28" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 864, 632 )

[node name="Tile29" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 928, 568 )

[node name="Tile30" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 928, 632 )

[node name="Tile31" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 992, 568 )

[node name="Tile32" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 992, 632 )

[node name="Tile33" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1056, 568 )

[node name="Tile34" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1056, 632 )

[node name="Tile35" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1120, 568 )

[node name="Tile36" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1120, 632 )

[node name="Tile37" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1184, 568 )

[node name="Tile38" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1184, 632 )

[node name="Tile39" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1248, 568 )

[node name="Tile40" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1248, 632 )

[node name="Tile41" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1312, 568 )

[node name="Tile42" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1312, 632 )

[node name="Tile43" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1376, 568 )

[node name="Tile44" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1376, 632 )

[node name="Tile45" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1440, 568 )

[node name="Tile46" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1440, 632 )

[node name="Tile47" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1504, 568 )

[node name="Tile48" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1504, 632 )

[node name="Tile49" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1568, 568 )

[node name="Tile50" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1568, 632 )

[node name="Tile51" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1632, 568 )

[node name="Tile52" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1632, 632 )

[node name="Tile53" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1696, 568 )

[node name="Tile54" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1696, 632 )

[node name="Tile55" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1760, 568 )

[node name="Tile56" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1760, 632 )

[node name="Tile57" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1824, 568 )

[node name="Tile58" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1824, 632 )

[node name="Tile59" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1888, 568 )

[node name="Tile60" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1888, 632 )

[node name="Tile61" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1952, 568 )

[node name="Tile62" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1952, 632 )

[node name="Tile63" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2016, 568 )

[node name="Tile64" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2016, 632 )

[node name="Tile65" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2080, 568 )

[node name="Tile66" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2080, 632 )

[node name="Tile67" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2144, 568 )

[node name="Tile68" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2144, 632 )

[node name="Tile69" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2208, 568 )

[node name="Tile70" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2208, 632 )

[node name="Tile71" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2272, 568 )

[node name="Tile72" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2272, 632 )

[node name="Tile73" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2336, 568 )

[node name="Tile74" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2336, 632 )

[node name="Tile75" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2400, 568 )

[node name="Tile76" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2400, 632 )

[node name="Tile77" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2464, 568 )

[node name="Tile78" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2464, 632 )

[node name="LeftWall" type="Node" parent="."]

[node name="Tile" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 568 )

[node name="Tile2" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 632 )

[node name="Tile3" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 504 )
rotation = 0.0190545

[node name="Tile4" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 440 )
rotation = 0.0190545

[node name="Tile5" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 376 )
rotation = 0.0190545

[node name="Tile6" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 312 )
rotation = 0.0190545

[node name="Tile7" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 248 )
rotation = 0.0190545

[node name="Tile8" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 192 )
rotation = 0.0190545

[node name="Tile9" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 128 )
rotation = 0.0190545

[node name="Tile10" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 64 )
rotation = 0.0190545

[node name="Tile11" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( -32, 0 )
rotation = 0.0190545

[node name="Tile12" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 504 )
rotation = 0.0190545

[node name="Tile13" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 440 )
rotation = 0.0190545

[node name="Tile14" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 376 )
rotation = 0.0190545

[node name="Tile15" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 312 )
rotation = 0.0190545

[node name="Tile16" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 248 )
rotation = 0.0190545

[node name="Tile17" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 192 )
rotation = 0.0190545

[node name="Tile18" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 128 )
rotation = 0.0190545

[node name="Tile19" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 64 )
rotation = 0.0190545

[node name="Tile20" parent="LeftWall" instance=ExtResource( 1 )]
position = Vector2( 32, 0 )
rotation = 0.0190545

[node name="Tetris" type="Node" parent="."]

[node name="Tile" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 864, 504 )

[node name="Tile2" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 928, 504 )

[node name="Tile3" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 928, 440 )

[node name="Tile4" parent="Tetris" instance=ExtResource( 1 )]
position = Vector2( 992, 504 )

[node name="Block" type="Node" parent="."]

[node name="Tile" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 992, 440 )

[node name="Tile2" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1056, 440 )

[node name="Tile3" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1056, 504 )

[node name="Tile4" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1120, 504 )

[node name="Tile5" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1120, 440 )

[node name="Tile6" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1184, 440 )

[node name="Tile7" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1184, 504 )

[node name="Tile8" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1184, 376 )

[node name="Tile9" parent="Block" instance=ExtResource( 1 )]
position = Vector2( 1120, 376 )

[node name="Fork" type="Node" parent="."]

[node name="Tile" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1504, 376 )

[node name="Tile2" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1568, 376 )

[node name="Tile3" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1632, 376 )

[node name="Tile4" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1504, 192 )

[node name="Tile5" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1568, 192 )

[node name="Tile6" parent="Fork" instance=ExtResource( 1 )]
position = Vector2( 1632, 192 )

[node name="Fork2" type="Node" parent="."]

[node name="Tile" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 1056, 192 )

[node name="Tile2" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 992, 192 )

[node name="Tile3" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 928, 192 )

[node name="Tile4" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 864, 192 )

[node name="Tile5" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 864, 128 )

[node name="Tile6" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 864, 64 )

[node name="Tile7" parent="Fork2" instance=ExtResource( 1 )]
position = Vector2( 864, 0 )

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 1248, 480 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 1496, 296 )
scale = Vector2( -1, 1 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 1496, 112 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 300 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 224, 300 )
current = true
limit_left = 0
limit_top = 0
limit_right = 2926
limit_bottom = 618
smoothing_enabled = true
editor_draw_limits = true

[node name="CanvasLayer" parent="Camera2D" instance=ExtResource( 3 )]

[node name="Plot" type="Node" parent="."]

[node name="PlotHoming" parent="Plot" instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Plot/PlotHoming" index="0"]
position = Vector2( 992, 315.5 )
shape = SubResource( 1 )

[node name="PlotSector" parent="Plot" instance=ExtResource( 5 )]

[connection signal="area_entered" from="Plot/PlotHoming" to="." method="_on_PlotHoming_area_entered"]
[connection signal="area_entered" from="Plot/PlotSector" to="." method="_on_PlotSector_area_entered"]

[editable path="Plot/PlotHoming"]
